# cht_tsunami

./: .gitignore  LICENSE  README.md  pyproject.toml
src/cht_tsunami/: __init__.py  tsunami.py
src/cht_tsunami/test/: makran_sample160_Mw8.5_event26552.tif  makran_sample220_Mw9.0_event31544.tif  makran_sample3_Mw7.2_event1.tif  makran_statistics.xlsx  readme.txt  test_pyclaw.py  tsunami.nc
