[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
version = "0.0.1"
name = "cht-tsunami"
authors = [
    {name = "Maarten van Ormondt", email = "maarten.vanormondt@deltares-usa.us"},
    {name = "Lauren Shambach", email = "lauren.shambach@deltares-usa.us"},
]
requires-python = ">=3.10"
dependencies = [
    "geopandas >=0.8",
    "numpy",
    "pandas",
    "pyproj",
    "rasterio",
    "shapely",
    "scipy",
    "xarray",
    "wget",
    "elementpath",
    "geojson",
    "Pillow",
    "matplotlib",
    "noaa-coops",
    "metpy",
    "siphon",
    "netCDF4",
    "mat73",
    "tabulate",
    "pyyaml",
	"xugrid",
    "toml",
    "hera"
]
